--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,42 @@
-language: node_js
-node_js:
-  - 12
+matrix:
+  allow_failures:
+    - os: windows
 
-before_script:
-  - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
+os:
+  - osx
+  - linux
+  - windows
+
+language: node_js
+
+node_js:
+  - node
+  - 10
+  - 9
+  - 8
+
+cache:
+  - yarn: true
+  - cargo: true
+
+before_install:
+  # Install Rust and Cargo
+  - |
+    if [ "$TRAVIS_OS_NAME" == "windows" ]; then
+      choco install rust && refreshenv
+    else
+      curl https://sh.rustup.rs -sSf > /tmp/rustup.sh && /
+      sh /tmp/rustup.sh -y && /
+      export PATH="$HOME/.cargo/bin:$PATH" && /
+      source "$HOME/.cargo/env"
+    fi
+  # Install global NPM packages
+  - node -v
+  - npm -v
+  - npm i -g yarn@latest neon-cli@latest lerna@latest
+  - yarn && cd near-sdk-sim && yarn build
 
 script:
-  - fossa init
-  - fossa analyze --server-scan
-  - fossa test
+  - cd near-sdk-sim && yarn test
+  - COMMIT_MESSAGE=$(git log --format=%B --no-merges -n 1 | tr -d '\n')
+  - if [[ ${COMMIT_MESSAGE} =~ "[publish binary]" ]]; then yarn test; fi
